--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "craco-less": "^1.20.0",
-    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
